recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:12: error: expected start of definition
	override def run() {
                 ^Spiral:16: error: Unmatched closing brace '}' ignored here
}
^